# season-renamer

./: README.md  pyproject.toml
season_renamer/: main.py
