[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "season-renamer"
version = "0.1.0"
authors = [
  { name="Tmaster055" },
]
description = "A simple tool to rename TV show episodes from multiple seasons into one continuous season (S01)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tmaster055/season-renamer"
Issues = "https://github.com/Tmaster055/season-renamer/issues"

[project.scripts]
season-renamer = "season_renamer.main:main"
